name:           network-bsd
version:        3.0.0.0
license:        BSD3
license-file:   LICENSE
maintainer:     Kazu Yamamoto
synopsis:       Network.BSD
description:
  The network package version 2 provides Network.BSD but
  it is removed from version 3.
  This module provides Network.BSD split from the network package.
  If Network.BSD is necessary, add network-bsd to dependencies.
  .
  > library
  >     build-depends: network
  >                  , network-bsd
  .
  You can control the version of the network package.
  .
  Example 1:
  .
  > library
  >     build-depends: network >= 3
  >                  , network-bsd
  .
  Example 2:
  .
  > library
  >     build-depends: network >= 2.7 && < 3
  >                  , network-bsd
  .
category:       Network
build-type:     Configure
cabal-version:  >=1.8
extra-tmp-files:
  config.log config.status autom4te.cache network-bsd.buildinfo
  include/HsNetworkConfig.h
extra-source-files:
  config.guess config.sub install-sh
  configure.ac configure network-bsd.buildinfo.in
  include/HsNetworkConfig.h.in include/HsNet.h include/HsNetDef.h
homepage:       https://github.com/haskell/network-bsd
bug-reports:    https://github.com/haskell/network-bsd/issues
tested-with:   GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.3

library
  exposed-modules: Network.BSD
  build-depends: base
               , network >= 3
  include-dirs: include
  includes: HsNet.h HsNetDef.h
  install-includes: HsNet.h HsNetDef.h
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/haskell/network-bsd.git
