cabal-version:  1.12
name:           network-bsd
version:        2.8.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Kazu Yamamoto
synopsis:       Network.BSD
description:
  The @network@ package version 2.* series provides "Network.BSD" but
  it is removed starting with @network@ version 3.0.
  .
  This package provides the "Network.BSD" module split off from the
  <https://hackage.haskell.org/package/network network package>.
  .
  If in addition to the @network@'s modules also "Network.BSD" is
  necessary, add @network-bsd@ to your dependencies like so:
  .
  > library
  >     build-depends: network     >= 2.7 && < 3.1
  >                  , network-bsd >= 2.7 && < 2.9
  .
  I.e. you can control the version of the @network@ package
  independently.
  .
  __NOTE__: Starting with version @network-bsd-2.8.0.1@ this package
  requires @network >= 3@ in order to avoid module name clashes with
  @network < 3@'s "Network.BSD" module.
  .
  However, @network-bsd-2.7.0.0@ and @network-bsd-2.8.0.0@ passes thru
  the "Network.BSD" module from @network-2.7.*@ and @network-2.8.*@
  respectively in a non-clashing way via Cabal's
  <https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-library-reexported-modules reexported-modules>
  feature while ensuring a well-defined
  <https://pvp.haskell.org/ API versioning> of the observable API of
  @network-bsd@. This is why the example above supporting a wide range
  of @network@ versions works by including version 2.7.0.0 in the
  required version range of @network-bsd@.

category:       Network
build-type:     Configure
extra-tmp-files:
  config.log config.status autom4te.cache network-bsd.buildinfo
  include/HsNetworkConfig.h
extra-source-files:
  config.guess config.sub install-sh
  configure.ac configure network-bsd.buildinfo.in
  include/HsNetworkConfig.h.in include/HsNet.h include/HsNetDef.h
homepage:       https://github.com/haskell/network-bsd
bug-reports:    https://github.com/haskell/network-bsd/issues
tested-with:   GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.2

library
  default-language: Haskell2010
  other-extensions: CPP, NondecreasingIndentation
  exposed-modules: Network.BSD
  build-depends: base    >= 4.7 && < 5
               , network >= 3 && < 3.1
  build-tools: hsc2hs >= 0.67 && < 0.69
  include-dirs: include
  includes: HsNet.h HsNetDef.h
  install-includes: HsNet.h HsNetDef.h
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/haskell/network-bsd.git
